--- a/src/Utilities/_variables.scss
+++ b/src/Utilities/_variables.scss
@@ -19,10 +19,11 @@ $lightModeShadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
 // Dark mode
 $darkModeGrey: rgb(10, 19, 36);
 $darkModeGrey50: rgba(17, 29, 52, 0.5);
+$darkModeNavbar: rgba(9, 18, 37, 0.75);
 $darkModeTweet: rgba(25, 40, 70, 0.621);
 $darkModeTweet50: #192846;
 $darkModeText: #e0e7f0;
-$darkModeSubtext: #d2ddf9;
+$darkModeSubtext: #55607e;
 $darkModeBG: url("../../Assets/Images/Dark-BG.jpg");
 $darkModeShadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
 
