--- a/src/Styles/Avatar/Avatar.css
+++ b/src/Styles/Avatar/Avatar.css
@@ -1,12 +1,15 @@
 .avatar__container {
-  -o-object-fit: contain;
-     object-fit: contain;
   border-radius: 200px;
   overflow: hidden;
 }
 
 .avatar__container img {
-  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .light.avatar__container {
