--- a/src/Styles/ProfilePreview/ProfilePreview.css
+++ b/src/Styles/ProfilePreview/ProfilePreview.css
@@ -1,5 +1,6 @@
 .profilepreview__container {
   position: relative;
+  height: 300px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13,13 +14,26 @@
 .profilepreview__container .profilepreview__banner {
   width: 100%;
   overflow: hidden;
-  min-height: 33%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  min-height: 100px;
+  max-height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .profilepreview__container .profilepreview__banner img {
-  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .profilepreview__container .profilepreview__avatar {
