--- a/src/Styles/ProfilePreview/ProfilePreview.scss
+++ b/src/Styles/ProfilePreview/ProfilePreview.scss
@@ -2,7 +2,7 @@
 
 .profilepreview__container {
     position: relative;
-    //   height: 100px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     font-family: $sansSerifMain;
@@ -10,12 +10,19 @@
     .profilepreview__banner {
         width: 100%;
         overflow: hidden;
-        min-height: 33%;
-        // max-height: 33%;
-        object-fit: contain;
+        min-height: 100px;
+        max-height: 100px;
+        // object-fit: contain;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         img {
-            width: 100%;
+            min-width: 100%;
+            min-height: 100%;
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: cover;
         }
     }
 
