--- a/src/Styles/SignUpPage/SignUpPage.css
+++ b/src/Styles/SignUpPage/SignUpPage.css
@@ -2,7 +2,6 @@
   font-family: "Roboto", sans-serif;
   width: 100%;
   height: 100vh;
-  background-image: url("../../Assets/Images/Auth-BG.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
@@ -18,5 +17,13 @@
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
+}
+
+.light.signup__container {
+  background-image: url("../../Assets/Images/Auth-BG.jpg");
+}
+
+.dark.signup__container {
+  background-image: url("../../Assets/Images/Auth-Dark-BG.jpg");
 }
 /*# sourceMappingURL=SignUpPage.css.map */
