--- a/src/Styles/Tweet/Tweet.scss
+++ b/src/Styles/Tweet/Tweet.scss
@@ -29,9 +29,11 @@
                 border-radius: 100px;
 
                 img {
+                    min-width: 100%;
+                    min-height: 100%;
                     max-height: 100%;
                     max-width: 100%;
-                    object-fit: contain;
+                    object-fit: cover;
                 }
             }
         }
