--- a/src/Styles/UpdateProfileModal/UpdateProfileModal.scss
+++ b/src/Styles/UpdateProfileModal/UpdateProfileModal.scss
@@ -12,6 +12,10 @@
         color: $lightModeGrey2;
     }
 
+    .update__icon {
+        color: $darkModeText;
+    }
+
     .update__heading {
         display: flex;
         justify-content: space-between;
@@ -27,6 +31,32 @@
         width: 100%;
         height: 200px;
         overflow: hidden;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .update__banner-icon {
+            background: rgba(0, 0, 0, 0.506);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+
+            .update__icon {
+                font-size: 18px;
+                cursor: pointer;
+                transition: transform 0.2s ease;
+
+                &:hover {
+                    transform: scale(1.1);
+                }
+            }
+        }
 
         img {
             object-fit: cover;
@@ -40,6 +70,53 @@
         gap: $homeGap;
         padding: 32px;
         width: 100%;
+
+        .update__pfp {
+            position: relative;
+            border-radius: 50%;
+            overflow: hidden;
+
+            .update__pfp-icon {
+                background: rgba(0, 0, 0, 0.506);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 100;
+
+                .update__icon {
+                    font-size: 18px;
+                    cursor: pointer;
+                    transition: transform 0.2s ease;
+
+                    &:hover {
+                        transform: scale(1.1);
+                    }
+                }
+            }
+            .update__pfp-image {
+                height: 150px;
+                width: 150px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+                overflow: hidden;
+                position: relative;
+
+                img {
+                    min-width: 100%;
+                    min-height: 100%;
+                    max-width: 100%;
+                    max-height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
 
         .update__name {
             display: flex;
@@ -70,16 +147,32 @@
         padding: 0px 32px 32px 32px;
         display: flex;
         justify-content: center;
+        gap: 1em;
 
         button {
-            padding: 16px 32px;
+            padding: 14px 32px;
             border-radius: 100px;
-            border: none;
-            background: $mainBlue;
-            color: white;
             font-family: $sansSerifMain;
             font-weight: 500;
             font-size: 14px;
+            transition: transform 0.2s ease;
+
+            &:hover {
+                transform: translateY(-10%);
+                cursor: pointer;
+            }
+        }
+
+        #update__cancel {
+            border: 2px solid $mainBlue;
+            background: none;
+            color: $mainBlue;
+        }
+
+        #update__save {
+            border: none;
+            background: $mainBlue;
+            color: white;
         }
     }
 }
