--- a/src/Styles/UserPage/UserPage.scss
+++ b/src/Styles/UserPage/UserPage.scss
@@ -2,7 +2,6 @@
 
 .userpage__container {
     width: 100%;
-    background-image: url("../../Assets/Images/Light-BG-2.jpg");
     background-size: cover;
     background-position: center;
     position: relative;
@@ -20,9 +19,6 @@
 
         img {
             width: 100%;
-            //   display: block;
-            //   margin-left: auto;
-            //   margin-right: auto;
         }
     }
 
@@ -36,28 +32,22 @@
             width: 250px;
             height: 250px;
             transform: translateY(-50%);
-            // transform: translate3d(100%, -50%, 0);
             border-radius: 50%;
             overflow: hidden;
             z-index: 1000;
             box-shadow: 0px 30px 30px rgba(60, 156, 225, 0.3);
-            // border: 5px solid $mainBlue;
 
             img {
+                min-width: 100%;
+                min-height: 100%;
                 max-width: 100%;
                 max-height: 100%;
-                object-fit: contain;
+                object-fit: cover;
                 z-index: 1000;
             }
         }
 
         .userpage__follow-container {
-            // position: absolute;
-            // transform: translate3d(3500%, -50%, 0);
-            // top: 17.75%;
-            // right: 12.5%;
-            // transform: translateY(-50%);
-
             button {
                 padding: 16px 48px;
                 border-radius: 50px;
@@ -104,19 +94,12 @@
             gap: $homeGap;
             width: 25%;
             margin-top: 7.5%;
-            color: $lightModeGrey;
 
             .profiledetails__user-profile {
                 width: 80%;
                 h3 {
                     font-weight: 400;
                 }
-            }
-
-            hr {
-                border: none;
-                border-top: 1px solid $lightModeGrey2;
-                width: 80%;
             }
 
             .profiledetails__details {
@@ -138,5 +121,39 @@
             gap: $homeGap;
             margin-top: 0%;
         }
+    }
+}
+
+.light.userpage__container {
+    background-image: $lightModeBG;
+
+    .userpage__content-stats {
+        color: $lightModeGrey;
+    }
+
+    hr {
+        border: none;
+        width: 80%;
+        border-top: 1px solid $lightModeGrey2;
+    }
+}
+
+.dark.userpage__container {
+    background-image: $darkModeBG;
+
+    .userpage__content-stats {
+        color: $darkModeGrey;
+    }
+
+    hr {
+        border: none;
+        width: 80%;
+        border-top: 1px solid $darkModeSubtext;
+    }
+
+    h1,
+    h3,
+    p {
+        color: $darkModeText;
     }
 }
