--- a/src/Styles/ProfilePage/ProfilePage.scss
+++ b/src/Styles/ProfilePage/ProfilePage.scss
@@ -70,7 +70,7 @@
     .profilepage__content {
         display: flex;
         gap: $homeGap;
-        padding: 24px 12.5%;
+        padding: 24px 12.5% 120px;
     }
 }
 
