--- a/src/Utilities/_variables.scss
+++ b/src/Utilities/_variables.scss
@@ -22,8 +22,9 @@ $darkModeGrey50: rgba(17, 29, 52, 0.5);
 $darkModeNavbar: rgba(9, 18, 37, 0.75);
 $darkModeTweet: rgba(25, 40, 70, 0.621);
 $darkModeTweet50: #192846;
+// $darkModeTweet50: #28395d;
 $darkModeText: #e0e7f0;
-$darkModeSubtext: #55607e;
+$darkModeSubtext: #788ea8;
 $darkModeBG: url("../../Assets/Images/Dark-BG.jpg");
 $darkModeShadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
 
